Added basic tests to VehicleControllerTest